--- a/index.html
+++ b/index.html
@@ -110,33 +110,36 @@
           return this.candidates.filter((candidate) => candidate.status === this.currentStage);
         },
       },
-      methods: {
-        async fetchCandidates() {
-          const API_KEY = "pat94fgVk7Hg9DD2y.8d94f09c0d80ea25aedbf399336d802878e06c5ea7d06935b207e97f480f146a";
-          const BASE_ID = "appV7SAgCIQPHKW0f";
-          const TABLE_NAME = "tblz4NvNAsiPck0uS";
-          const url = `https://api.airtable.com/v0/${BASE_ID}/${TABLE_NAME}`;
-          try {
-            const response = await axios.get(url, {
-              headers: {
-                Authorization: `Bearer ${API_KEY}`,
-              },
-            });
-            this.candidates = response.data.records.map((record) => ({
-              id: record.id,
-              name: record.fields["Full Name"],
-              linkedin: record.fields["LinkedIn"],
-              cvLink: record.fields["Attach CV and other files"],
-              cvName: "Download CV",
-              status: record.fields["Candidate Status (Recruiting)"],
-              summary: record.fields["Summary"],
-              scoring: record.fields["Scoring based on criteria"],
-              avatar: record.fields["Avatar"]?.[0]?.url || "https://via.placeholder.com/150",
-            }));
-          } catch (error) {
-            console.error("Error fetching candidates:", error);
-          }
+methods: {
+  async fetchCandidates() {
+    const API_KEY = "pat94fgVk7Hg9DD2y.8d94f09c0d80ea25aedbf399336d802878e06c5ea7d06935b207e97f480f146a";
+    const BASE_ID = "appV7SAgCIQPHKW0f";
+    const TABLE_NAME = "tblz4NvNAsiPck0uS";
+    const url = `https://api.airtable.com/v0/${BASE_ID}/${TABLE_NAME}`;
+    try {
+      const response = await axios.get(url, {
+        headers: {
+          Authorization: `Bearer ${API_KEY}`,
         },
+      });
+      console.log("Airtable response:", response.data); // Отладочный вывод
+      this.candidates = response.data.records.map((record) => ({
+        id: record.id,
+        name: record.fields["Full Name"],
+        linkedin: record.fields["LinkedIn"],
+        cvLink: record.fields["Attach CV and other files"],
+        cvName: "Download CV",
+        status: record.fields["Candidate Status (Recruiting)"],
+        summary: record.fields["Summary"],
+        scoring: record.fields["Scoring based on criteria"],
+        avatar: record.fields["Avatar"]?.[0]?.url || "https://via.placeholder.com/150",
+      }));
+      console.log("Candidates loaded:", this.candidates); // Отладочный вывод
+    } catch (error) {
+      console.error("Error fetching candidates:", error); // Лог ошибок
+    }
+  },
+
         showDetails(candidate) {
           this.selectedCandidate = candidate;
         },
