--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      cursor: pointer;
     }
     th,
     td {
@@ -27,125 +26,61 @@
     .candidate-row:hover {
       background-color: #F9F9F9;
     }
-    .candidate-details {
-      position: fixed;
-      right: 0;
-      top: 0;
-      width: 30%;
-      height: 100%;
-      background-color: #fff;
-      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
-      transition: transform 0.3s ease;
-      transform: translateX(100%);
-    }
-    .candidate-details.open {
-      transform: translateX(0);
-    }
-    .avatar {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-    }
   </style>
 </head>
 <body>
-  <div id="app">
-    <div class="candidate-pipeline">
-      <h2>{{ currentStage }} ({{ filteredCandidates.length }})</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Candidates</th>
-            <th>LinkedIn</th>
-            <th>CV</th>
-            <th>Candidate Status</th>
-            <th>Summary</th>
-            <th>Scoring based on criteria</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr
-            v-for="candidate in filteredCandidates"
-            :key="candidate.id"
-            @click="showDetails(candidate)"
-            class="candidate-row"
-          >
-            <td>{{ candidate.name }}</td>
-            <td><a :href="candidate.linkedin" target="_blank">LinkedIn</a></td>
-            <td><a :href="candidate.cvLink" target="_blank">CV</a></td>
-            <td>{{ candidate.status }}</td>
-            <td>{{ candidate.summary }}</td>
-            <td>{{ candidate.scoring }}</td>
-          </tr>
-        </tbody>
-      </table>
-      <div v-bind:class="['candidate-details', { open: selectedCandidate }]">
-        <div v-if="selectedCandidate">
-          <h3>{{ selectedCandidate.name }}</h3>
-          <p><strong>Summary:</strong> {{ selectedCandidate.summary }}</p>
-          <p><strong>LinkedIn:</strong> <a :href="selectedCandidate.linkedin" target="_blank">{{ selectedCandidate.linkedin }}</a></p>
-          <img :src="selectedCandidate.avatar" alt="Avatar" class="avatar" />
-          <a :href="selectedCandidate.cvLink" target="_blank">{{ selectedCandidate.cvName }}</a>
-        </div>
-      </div>
-    </div>
+  <div id="app" class="candidate-pipeline">
+    <h2>Candidates ({{ candidates.length }})</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Candidates</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="candidate in candidates" :key="candidate.id" class="candidate-row">
+          <td>{{ candidate.name }}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+
   <script>
     new Vue({
       el: "#app",
       data() {
         return {
-          currentStage: "Interviewing",
-          stages: ["Screening", "Interviewing", "Offer", "Closed lost", "All candidates"],
-          candidates: [],
-          selectedCandidate: null,
+          candidates: [], // Список кандидатов
         };
       },
-      computed: {
-        filteredCandidates() {
-          if (this.currentStage === "All candidates") {
-            return this.candidates;
-          }
-          return this.candidates.filter((candidate) => candidate.status === this.currentStage);
-        },
-      },
-methods: {
-  async fetchCandidates() {
-    const API_KEY = "pat94fgVk7Hg9DD2y.8d94f09c0d80ea25aedbf399336d802878e06c5ea7d06935b207e97f480f146a";
-    const BASE_ID = "appV7SAgCIQPHKW0f";
-    const TABLE_NAME = "tblz4NvNAsiPck0uS";
-    const url = `https://api.airtable.com/v0/${BASE_ID}/${TABLE_NAME}`;
-    try {
-      const response = await axios.get(url, {
-        headers: {
-          Authorization: `Bearer ${API_KEY}`,
-        },
-      });
-      console.log("Airtable response:", response.data); // Отладочный вывод
-      this.candidates = response.data.records.map((record) => ({
-        id: record.id,
-        name: record.fields["Full Name"],
-        linkedin: record.fields["LinkedIn"],
-        cvLink: record.fields["Attach CV and other files"],
-        cvName: "Download CV",
-        status: record.fields["Candidate Status (Recruiting)"],
-        summary: record.fields["Summary"],
-        scoring: record.fields["Scoring based on criteria"],
-        avatar: record.fields["Avatar"]?.[0]?.url || "https://via.placeholder.com/150",
-      }));
-      console.log("Candidates loaded:", this.candidates); // Отладочный вывод
-    } catch (error) {
-      console.error("Error fetching candidates:", error); // Лог ошибок
-    }
-  },
+      methods: {
+        async fetchCandidates() {
+          const API_KEY = "pat94fgVk7Hg9DD2y.8d94f09c0d80ea25aedbf399336d802878e06c5ea7d06935b207e97f480f146a";
+          const BASE_ID = "appV7SAgCIQPHKW0f";
+          const TABLE_NAME = "tblz4NvNAsiPck0uS";
+          const url = `https://api.airtable.com/v0/${BASE_ID}/${TABLE_NAME}`;
 
-        showDetails(candidate) {
-          this.selectedCandidate = candidate;
+          try {
+            const response = await axios.get(url, {
+              headers: {
+                Authorization: `Bearer ${API_KEY}`,
+              },
+            });
+
+            // Парсим только имена
+            this.candidates = response.data.records.map((record) => ({
+              id: record.id,
+              name: record.fields["Full Name"]?.[0] || "Unknown Name",
+            }));
+
+            console.log("Candidates loaded:", this.candidates);
+          } catch (error) {
+            console.error("Error fetching candidates:", error);
+          }
         },
       },
       mounted() {
-        this.fetchCandidates();
+        this.fetchCandidates(); // Загрузка данных при загрузке страницы
       },
     });
   </script>
