--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
     .candidate-pipeline {
       margin: 20px;
     }
@@ -21,10 +24,52 @@
       text-align: left;
     }
     th {
-      background-color: #F2F2F2;
+      background-color: #f2f2f2;
     }
     .candidate-row:hover {
-      background-color: #F9F9F9;
+      background-color: #f9f9f9;
+      cursor: pointer;
+    }
+    .candidate-details {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 40%;
+      height: 100%;
+      background-color: #fff;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      overflow-y: auto;
+      transform: translateX(100%);
+      transition: transform 0.3s ease;
+    }
+    .candidate-details.open {
+      transform: translateX(0);
+    }
+    .close-button {
+      background: none;
+      border: none;
+      font-size: 16px;
+      color: #555;
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+    .close-button:hover {
+      color: #000;
+    }
+    .candidate-avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+    .candidate-overview h3 {
+      margin-top: 0;
+    }
+    .candidate-overview p {
+      margin: 5px 0;
     }
   </style>
 </head>
@@ -38,23 +83,36 @@
           <th>LinkedIn</th>
           <th>Candidate Status</th>
           <th>Summary</th>
-          <th>CV</th>
         </tr>
       </thead>
       <tbody>
-        <tr v-for="candidate in candidates" :key="candidate.id" class="candidate-row">
+        <tr v-for="candidate in candidates" :key="candidate.id" class="candidate-row" @click="showDetails(candidate)">
           <td>{{ candidate.name }}</td>
-          <td>
-            <a :href="candidate.linkedin" target="_blank">LinkedIn</a>
-          </td>
+          <td><a :href="candidate.linkedin" target="_blank">LinkedIn</a></td>
           <td>{{ candidate.status }}</td>
           <td>{{ candidate.summary }}</td>
-          <td>
-            <a :href="candidate.cvLink" target="_blank">Download CV</a>
-          </td>
         </tr>
       </tbody>
     </table>
+
+    <!-- Панель с деталями -->
+    <div class="candidate-details" :class="{ open: selectedCandidate }">
+      <button class="close-button" @click="selectedCandidate = null">Close</button>
+      <div v-if="selectedCandidate" class="candidate-overview">
+        <img :src="selectedCandidate.avatar" alt="Avatar" class="candidate-avatar">
+        <h3>{{ selectedCandidate.name }}</h3>
+        <p><strong>Status:</strong> {{ selectedCandidate.status }}</p>
+        <p><strong>Summary:</strong> {{ selectedCandidate.summary }}</p>
+        <p>
+          <strong>LinkedIn:</strong>
+          <a :href="selectedCandidate.linkedin" target="_blank">{{ selectedCandidate.linkedin }}</a>
+        </p>
+        <p>
+          <strong>CV:</strong>
+          <a :href="selectedCandidate.cvLink" target="_blank">Download CV</a>
+        </p>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -63,6 +121,7 @@
       data() {
         return {
           candidates: [], // Список кандидатов
+          selectedCandidate: null, // Текущий выбранный кандидат
         };
       },
       methods: {
@@ -85,14 +144,18 @@
               name: record.fields["Full Name"]?.[0] || "Unknown Name",
               linkedin: record.fields["LinkedIn"]?.[0] || "#",
               status: record.fields["Candidate Status (Recruiting)"]?.[0] || "No Status",
-              summary: record.fields["Summary"] || "No Summary", // Добавили поле Summary
-              cvLink: record.fields["Attach CV and other files"]?.[0] || "#", // Ссылка на CV
+              summary: record.fields["Summary"] || "No Summary",
+              avatar: record.fields["Avatar"]?.[0]?.url || "https://via.placeholder.com/100",
+              cvLink: record.fields["Attach CV and other files"]?.[0] || "#",
             }));
 
             console.log("Candidates loaded:", this.candidates);
           } catch (error) {
             console.error("Error fetching candidates:", error);
           }
+        },
+        showDetails(candidate) {
+          this.selectedCandidate = candidate;
         },
       },
       mounted() {
