--- a/index.html
+++ b/index.html
@@ -4,60 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Candidate Pipeline</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .candidate-pipeline {
-      margin: 20px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th,
-    td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    .candidate-row:hover {
-      background-color: #f9f9f9;
-      cursor: pointer;
-    }
     .candidate-details {
       position: fixed;
       top: 0;
       right: 0;
-      width: 40%;
+      width: 35%;
       height: 100%;
-      background-color: #fff;
+      background-color: #f8f9fa;
       box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
       padding: 20px;
       overflow-y: auto;
-      transform: translateX(100%);
       transition: transform 0.3s ease;
     }
     .candidate-details.open {
       transform: translateX(0);
     }
-    .close-button {
-      background: none;
-      border: none;
-      font-size: 16px;
-      color: #555;
-      cursor: pointer;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-    .close-button:hover {
-      color: #000;
+    .candidate-details.closed {
+      transform: translateX(100%);
     }
     .candidate-avatar {
       width: 100px;
@@ -65,19 +32,27 @@
       border-radius: 50%;
       margin-bottom: 10px;
     }
-    .candidate-overview h3 {
-      margin-top: 0;
+    .table-hover tbody tr:hover {
+      background-color: #e9ecef;
+      cursor: pointer;
     }
-    .candidate-overview p {
-      margin: 5px 0;
+    .close-btn {
+      float: right;
+      font-size: 20px;
+      font-weight: bold;
+      color: #333;
+      text-decoration: none;
+    }
+    .close-btn:hover {
+      color: #000;
     }
   </style>
 </head>
 <body>
-  <div id="app" class="candidate-pipeline">
-    <h2>Candidates ({{ candidates.length }})</h2>
-    <table>
-      <thead>
+  <div id="app" class="container my-4">
+    <h2 class="mb-4">Candidates ({{ candidates.length }})</h2>
+    <table class="table table-striped table-hover">
+      <thead class="table-dark">
         <tr>
           <th>Candidates</th>
           <th>LinkedIn</th>
@@ -86,9 +61,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="candidate in candidates" :key="candidate.id" class="candidate-row" @click="showDetails(candidate)">
+        <tr v-for="candidate in candidates" :key="candidate.id" @click="showDetails(candidate)">
           <td>{{ candidate.name }}</td>
-          <td><a :href="candidate.linkedin" target="_blank">LinkedIn</a></td>
+          <td><a :href="candidate.linkedin" target="_blank" class="text-decoration-none text-primary">LinkedIn</a></td>
           <td>{{ candidate.status }}</td>
           <td>{{ candidate.summary }}</td>
         </tr>
@@ -96,20 +71,20 @@
     </table>
 
     <!-- Панель с деталями -->
-    <div class="candidate-details" :class="{ open: selectedCandidate }">
-      <button class="close-button" @click="selectedCandidate = null">Close</button>
-      <div v-if="selectedCandidate" class="candidate-overview">
-        <img :src="selectedCandidate.avatar" alt="Avatar" class="candidate-avatar">
+    <div :class="['candidate-details', selectedCandidate ? 'open' : 'closed']">
+      <a href="#" class="close-btn" @click.prevent="selectedCandidate = null">&times;</a>
+      <div v-if="selectedCandidate">
+        <img :src="selectedCandidate.avatar" alt="Avatar" class="candidate-avatar img-thumbnail mb-3">
         <h3>{{ selectedCandidate.name }}</h3>
         <p><strong>Status:</strong> {{ selectedCandidate.status }}</p>
         <p><strong>Summary:</strong> {{ selectedCandidate.summary }}</p>
         <p>
           <strong>LinkedIn:</strong>
-          <a :href="selectedCandidate.linkedin" target="_blank">{{ selectedCandidate.linkedin }}</a>
+          <a :href="selectedCandidate.linkedin" target="_blank" class="text-decoration-none text-primary">{{ selectedCandidate.linkedin }}</a>
         </p>
         <p>
           <strong>CV:</strong>
-          <a :href="selectedCandidate.cvLink" target="_blank">Download CV</a>
+          <a :href="selectedCandidate.cvLink" target="_blank" class="btn btn-outline-primary btn-sm">Download CV</a>
         </p>
       </div>
     </div>
@@ -141,15 +116,13 @@
             // Парсим данные из Airtable
             this.candidates = response.data.records.map((record) => ({
               id: record.id,
-              name: record.fields["Full Name"]?.[0] || "Unknown Name",
-              linkedin: record.fields["LinkedIn"]?.[0] || "#",
-              status: record.fields["Candidate Status (Recruiting)"]?.[0] || "No Status",
+              name: record.fields["Full Name"] || "Unknown Name",
+              linkedin: record.fields["LinkedIn"] || "#",
+              status: record.fields["Candidate Status (Recruiting)"] || "No Status",
               summary: record.fields["Summary"] || "No Summary",
               avatar: record.fields["Avatar"]?.[0]?.url || "https://via.placeholder.com/100",
               cvLink: record.fields["Attach CV and other files"]?.[0] || "#",
             }));
-
-            console.log("Candidates loaded:", this.candidates);
           } catch (error) {
             console.error("Error fetching candidates:", error);
           }
