--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
+    body {
+      background-color: #f5f7fa;
+      font-family: Arial, sans-serif;
+    }
+    .table {
+      background: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .table thead th {
+      background-color: rgba(0, 0, 0, 0.05);
+      font-size: 14px;
+      text-transform: uppercase;
+    }
+    .table tbody tr {
+      border-bottom: 1px solid #e9ecef;
+    }
+    .tag {
+      padding: 5px 10px;
+      border-radius: 12px;
+      font-size: 12px;
+      color: #ffffff;
+      display: inline-block;
+    }
+    .tag-interviewing {
+      background-color: #0d6efd;
+    }
+    .tag-offer {
+      background-color: #198754;
+    }
+    .tag-rejected {
+      background-color: #dc3545;
+    }
     .candidate-details {
       position: fixed;
       top: 0;
@@ -32,10 +65,6 @@
       border-radius: 50%;
       margin-bottom: 10px;
     }
-    .table-hover tbody tr:hover {
-      background-color: #e9ecef;
-      cursor: pointer;
-    }
     .close-btn {
       float: right;
       font-size: 20px;
@@ -51,8 +80,8 @@
 <body>
   <div id="app" class="container my-4">
     <h2 class="mb-4">Candidates ({{ candidates.length }})</h2>
-    <table class="table table-striped table-hover">
-      <thead class="table-dark">
+    <table class="table">
+      <thead>
         <tr>
           <th>Candidates</th>
           <th>LinkedIn</th>
@@ -63,8 +92,14 @@
       <tbody>
         <tr v-for="candidate in candidates" :key="candidate.id" @click="showDetails(candidate)">
           <td>{{ candidate.name }}</td>
-          <td><a :href="candidate.linkedin" target="_blank" class="text-decoration-none text-primary">LinkedIn</a></td>
-          <td>{{ candidate.status }}</td>
+          <td>
+            <a :href="candidate.linkedin" target="_blank" class="text-decoration-none text-primary">LinkedIn</a>
+          </td>
+          <td>
+            <span :class="['tag', getStatusClass(candidate.status)]">
+              {{ candidate.status }}
+            </span>
+          </td>
           <td>{{ candidate.summary }}</td>
         </tr>
       </tbody>
@@ -95,8 +130,8 @@
       el: "#app",
       data() {
         return {
-          candidates: [], // Список кандидатов
-          selectedCandidate: null, // Текущий выбранный кандидат
+          candidates: [],
+          selectedCandidate: null,
         };
       },
       methods: {
@@ -113,7 +148,6 @@
               },
             });
 
-            // Парсим данные из Airtable
             this.candidates = response.data.records.map((record) => ({
               id: record.id,
               name: record.fields["Full Name"] || "Unknown Name",
@@ -127,12 +161,24 @@
             console.error("Error fetching candidates:", error);
           }
         },
+        getStatusClass(status) {
+          switch (status.toLowerCase()) {
+            case "interviewing":
+              return "tag-interviewing";
+            case "offer":
+              return "tag-offer";
+            case "rejected":
+              return "tag-rejected";
+            default:
+              return "tag-default";
+          }
+        },
         showDetails(candidate) {
           this.selectedCandidate = candidate;
         },
       },
       mounted() {
-        this.fetchCandidates(); // Загрузка данных при загрузке страницы
+        this.fetchCandidates();
       },
     });
   </script>
