--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     }
     .table tbody tr {
       border-bottom: 1px solid #e9ecef;
+      cursor: pointer;
+    }
+    .table tbody tr:hover {
+      background-color: #f1f3f5;
     }
     .tag {
       padding: 5px 10px;
