--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
     .table thead th {
-      background-color: rgba(0, 0, 0, 0.05);
+      background-color: #e3f2fd;
+      color: #0d6efd;
       font-size: 14px;
       text-transform: uppercase;
+      border-bottom: 2px solid #90caf9;
     }
     .table tbody tr {
       border-bottom: 1px solid #e9ecef;
@@ -35,15 +37,20 @@
       font-size: 12px;
       color: #ffffff;
       display: inline-block;
+      white-space: nowrap;
     }
     .tag-interviewing {
       background-color: #0d6efd;
     }
-    .tag-offer {
-      background-color: #198754;
+    .tag-outreach {
+      background-color: #ffc107;
+      color: #212529;
     }
-    .tag-rejected {
+    .tag-closed-lost {
       background-color: #dc3545;
+    }
+    .tag-researched {
+      background-color: #198754;
     }
     .candidate-details {
       position: fixed;
@@ -83,7 +90,6 @@
 </head>
 <body>
   <div id="app" class="container my-4">
-    <h2 class="mb-4">Candidates ({{ candidates.length }})</h2>
     <table class="table">
       <thead>
         <tr>
@@ -169,10 +175,12 @@
           switch (status.toLowerCase()) {
             case "interviewing":
               return "tag-interviewing";
-            case "offer":
-              return "tag-offer";
-            case "rejected":
-              return "tag-rejected";
+            case "outreaching/contacting":
+              return "tag-outreach";
+            case "closed lost":
+              return "tag-closed-lost";
+            case "researched":
+              return "tag-researched";
             default:
               return "tag-default";
           }
